# temporal-durable-training

./: .dockerignore  .gitignore  DEPLOY.md  README.md  SPEC.md  fly.toml  pyproject.toml  run.sh
dashboard/api/: main.py  ui_proxy.py
dashboard/web/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/web/src/: App.tsx  api.ts  index.css  types.ts
dashboard/web/src/components/: GpuGrid.tsx  StepList.tsx  SweepPanel.tsx  TemporalDrawer.tsx  TrainingPanel.tsx  WorkerPool.tsx
deploy/launcher/: Dockerfile  local_launch.py  main.py  provision.py  requirements.txt
deploy/sandbox/: Dockerfile  boot.sh
scripts/: demo_fault_tolerance.py  demo_gpu_pool.py  demo_human_in_the_loop.py  demo_node_failure.py  demo_sweep.py  run_workers.py
src/durable_training/: __init__.py  chaos.py  common.py  shared.py  worker.py
src/durable_training/activities/: __init__.py  broker.py  training.py
src/durable_training/activities/backends/: __init__.py  base.py  simulator.py  torch_backend.py
src/durable_training/workflows/: __init__.py  gpu_pool.py  sweep.py  training.py
tests/: conftest.py  test_gpu_kill.py  test_gpu_pool.py  test_sweep.py  test_training_workflow.py
