[project]
name = "durable-training"
version = "0.1.0"
description = "Durable, GPU-efficient, human-in-the-loop ML training orchestrated by Temporal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "temporalio>=1.7.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
# Real PyTorch training backend. The default "sim" backend needs none of this.
torch = ["torch>=2.1.0"]
# Dashboard API bridge (FastAPI over Temporal queries / visibility) + UI proxy.
dashboard = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0", "httpx>=0.27.0"]
# Test + dev tooling.
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/durable_training"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
